2005-07-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version
	* libgnome/gnome-score.c: (gnome_score_child): Fix
	typo that broke scores handling after the win32 merge.
	(Sebastien Bacher), Bug #309782.

2005-06-17  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-init.h: Remove misleading comment about
	gnome_win32_get_prefixes(). No reason why it can't be used by
	applications, too.

	* libgnome/dllmain.c (gnome_win32_get_prefixes): Improve doc
	comment.

2005-06-11  Tor Lillqvist  <tml@novell.com>

	* libgnome/dllmain.c (gnome_win32_get_prefixes): Actually put
	locale charset, not UTF-8, into cp_prefix in two of the cases.

2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: Revert fix for bug #109238
	since it creates glib-WARNINGS when g_set_application_name()
	is called elsewhere first.

2005-05-30  Kjartan Maraas  <kmaraas@gnome.org>

	* Merge fix for bug #305464 from stable.

2005-05-18  Alexander Larsson  <alexl@redhat.com>

	* libgnome/gnome-config.c:
	* libgnome/gnome-help.c:
	Use g_get_language_names() instead of gnome_i18n_get_language_list.
	
	* libgnome/gnome-i18n.c:
	Implement gnome_i18n_get_language_list using g_get_language_names
	instead of bonobo_activation_get_language_list.
	Mention in docs that you should use g_get_language_list, and that
	the category field now is ignored.

2004-10-20  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* libgnome/gnome-util.h: Fix the problem of
	Launcher unusable as root in solaris.
	Fixes bug #155913.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-gconf.c: Fix build with newer GCC. Patch
	from Ryan Lortie. Closes bug #169857.

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in: added a gconf key to 
	configure the gtk-menu-bar-accelerator.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in:
	Patch from Shaun McCance to add schemas for document