@@ -7,8 +7,11 @@
       <owner>gnome</owner>
       <type>string</type>
       <locale name="C">
-        <short>Fallback window manager</short>
-        <long>Fallback window manager if user window manager can't be found</long>
+        <short>Fallback window manager (deprecated)</short>
+        <long>
+          Fallback window manager if user window manager can't be found.
+          This key has been deprecated since GNOME 2.12.
+        </long>
       </locale>
     </schema>
     <schema>
@@ -17,8 +20,11 @@
       <owner>gnome</owner>
       <type>string</type>
       <locale name="C">
-        <short>User window manager</short>
-        <long>Window manager to try first</long>
+        <short>User window manager (deprecated)</short>
+        <long>
+          Window manager to try first.
+          This key has been deprecated since GNOME 2.12.
+        </long>
       </locale>
     </schema>
     <schema>
@@ -27,8 +33,11 @@
       <owner>gnome</owner>
       <type>int</type>
       <locale name="C">
-        <short>The number of workspaces</short>
-        <long>The number of workspaces the window manager should use</long>
+        <short>The number of workspaces (deprecated)</short>
+        <long>
+          The number of workspaces the window manager should use
+          This key has been deprecated since GNOME 2.12.
+        </long>
       </locale>
     </schema>
     <schema>
@@ -38,8 +47,11 @@
       <type>list</type>
       <list_type>string</list_type>
       <locale name="C">
-        <short>Names of the workspaces</short>
-        <long>A list with names of the first window manager workspaces.</long>
+        <short>Names of the workspaces (deprecated)</short>
+        <long>
+          A list with names of the first window manager workspaces.
+          This key has been deprecated since GNOME 2.12.
+        </long>
       </locale>
     </schema>
   </schemalist>
