@@ -1,3 +1,10 @@
+2005-07-19  Mark McLoughlin  <mark@skynet.ie>
+
+	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html
+
+	* schemas/desktop_gnome_applications_window_manager.schemas.in:
+	Add deprecated notices to each of the keys.
+
 2005-07-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Bump version
